# handball_cv

./: pyproject.toml  test_ultralytics.ipynb  test_yolo.ipynb
runs/detect/train/: args.yaml
