[tool.poetry]
name = "handball-cv"
version = "0.1.0"
description = "Trying CV models of handball videos"
authors = ["Baptiste Pugnaire"]
readme = "README.md"
packages = [{include = "handball_cv"}]

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
